# BeringChat

./: .gitignore  BUILD_GUIDE.md  DEBUG_GUIDE.md  DEBUG_IMPLEMENTATION.md  DEBUG_SUMMARY.md  Dockerfile  GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  README_DEBUG.md  data.sqlite  docker-compose.yml
client-desktop/: README.md  index.html  package.json
client-desktop/src/: App.tsx  styles.css
client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
client-desktop/src-tauri/src/: main.rs
client-desktop/src/components/: ChannelList.tsx  ChatView.tsx  Login.tsx  Settings.tsx
client-desktop/src/services/: api.ts  auth.ts  ws.ts
crates/server/: Cargo.toml
crates/server/src/: channel_call.rs  config.rs  error.rs  lib.rs  main.rs  presence.rs  websocket.rs  ws_bridge.rs
crates/server/src/api/: admin.rs  messages.rs  mod.rs  web.rs
crates/server/src/auth/: mod.rs  sessions.rs
crates/server/src/domain/: mod.rs
crates/server/src/federation/: handlers.rs  mod.rs  outbox.rs  protocol.rs
crates/server/src/storage/: sqlite.rs
crates/server/tests/: ws_bridge_integration.rs
tests/federation/: run.ps1  run.sh
