[package]
name = "beringshare-desktop-tauri"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tauri = { version = "1.3", features = ["api-all"] }
keyring = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.24"
url = "2"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
once_cell = "1.18"

[build-dependencies]
tauri-build = "1.3"
