[package]
name = "federated-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
time = { version = "=0.3.36", features = ["formatting", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
urlencoding = "2.1"
bcrypt = "0.15"

[dev-dependencies]
tempfile = "3.10"
